PROTON-2436: epoll raw connection TSAN race fix